# wigettes

./: Cargo.toml
src/: layout_rec.rs  lib.rs  tests.rs  widget.rs  wigette_type.rs
src/v2/: graphics.rs  mod.rs
src/v2/layout/: foo.rs  layout.rs  layout_response.rs  mod.rs  old.rs  rect.rs  resolution.rs  widget.rs
src/v2/util/: const.rs  mod.rs  wrapped_rem.rs
src/v2/widgets/: mod.rs  table.rs
src/v2/widgets/timebar/: mod.rs  timebar.rs
src/widgets/: button.rs  label_text.rs  mod.rs
src/wigette/: draw.rs  hbox.rs  layout.rs  mod.rs  vbox.rs  wigette.rs
